--- a/Clean-Continuous-Features.ipynb
+++ b/Clean-Continuous-Features.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Read in data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -8,8 +20,85 @@
    },
    "outputs": [],
    "source": [
-    ""
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "\n",
+    "titanic = pd.read_csv('titanic.csv')\n",
+    "titanic"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Clean continuous features"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Fill in missing age\n",
+    "titanic.groupby(titanic['Age'].isnull()).mean()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "titanic['Age'].fillna(titanic['Age'].mean(), inplace=True)\n",
+    "titanic.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "titanic.head(10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Combine SibSp and Parch\n",
+    "titanic['Family_cnt'] = titanic['SibSp'] + titanic['Parch']\n",
+    "titanic.drop(['SibSp', 'Parch'], axis=1, inplace=True)\n",
+    "titanic.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
