Move import statement for logistic regression and add header for logistic regression

--- a/Train-Models.ipynb
+++ b/Train-Models.ipynb
@@ -19,7 +19,6 @@
    "source": [
     "import joblib\n",
     "import pandas as pd\n",
-    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore', category=FutureWarning)\n",
@@ -98,54 +97,21 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rueip\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BEST PARAMS: {'C': 1}\n",
-      "\n",
-      "0.67 (+/-0.077) for {'C': 0.001}\n",
-      "0.708 (+/-0.098) for {'C': 0.01}\n",
-      "0.777 (+/-0.134) for {'C': 0.1}\n",
-      "0.8 (+/-0.118) for {'C': 1}\n",
-      "0.794 (+/-0.116) for {'C': 10}\n",
-      "0.794 (+/-0.116) for {'C': 100}\n",
-      "0.794 (+/-0.116) for {'C': 1000}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rueip\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
+    "### Logistic Regression"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
     "lr = LogisticRegression()\n",
     "parameters = {\n",
     "    'C': [0.001, 0.01, 0.1, 1, 10, 100, 1000]\n",
@@ -159,7 +125,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -202,18 +169,6 @@
    "source": [
     "joblib.dump(lr_cv.best_estimator_, 'LR-model.pkl')"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
