--- a/Train-Models.ipynb
+++ b/Train-Models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "     Pclass  Sex        Age      Fare  Family_cnt  Cabin_ind\n0         2    0  62.000000   10.5000           0          0\n1         3    0   8.000000   29.1250           5          0\n2         3    0  32.000000   56.4958           0          0\n3         3    1  20.000000    9.8250           1          0\n4         2    1  28.000000   13.0000           0          0\n..      ...  ...        ...       ...         ...        ...\n529       3    1  21.000000    7.6500           0          0\n530       1    0  29.699118   31.0000           0          0\n531       3    0  41.000000   14.1083           2          0\n532       1    1  14.000000  120.0000           3          1\n533       1    0  21.000000   77.2875           1          1\n\n[534 rows x 6 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Pclass</th>\n      <th>Sex</th>\n      <th>Age</th>\n      <th>Fare</th>\n      <th>Family_cnt</th>\n      <th>Cabin_ind</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2</td>\n      <td>0</td>\n      <td>62.000000</td>\n      <td>10.5000</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>3</td>\n      <td>0</td>\n      <td>8.000000</td>\n      <td>29.1250</td>\n      <td>5</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>0</td>\n      <td>32.000000</td>\n      <td>56.4958</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>1</td>\n      <td>20.000000</td>\n      <td>9.8250</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2</td>\n      <td>1</td>\n      <td>28.000000</td>\n      <td>13.0000</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>529</th>\n      <td>3</td>\n      <td>1</td>\n      <td>21.000000</td>\n      <td>7.6500</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>530</th>\n      <td>1</td>\n      <td>0</td>\n      <td>29.699118</td>\n      <td>31.0000</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>531</th>\n      <td>3</td>\n      <td>0</td>\n      <td>41.000000</td>\n      <td>14.1083</td>\n      <td>2</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>532</th>\n      <td>1</td>\n      <td>1</td>\n      <td>14.000000</td>\n      <td>120.0000</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>533</th>\n      <td>1</td>\n      <td>0</td>\n      <td>21.000000</td>\n      <td>77.2875</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>534 rows × 6 columns</p>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "     Survived\n0           1\n1           0\n2           1\n3           0\n4           1\n..        ...\n529         1\n530         0\n531         0\n532         1\n533         0\n\n[534 rows x 1 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Survived</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>529</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>530</th>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>531</th>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>532</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>533</th>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>534 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def print_results(results):\n",
@@ -107,8 +107,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BEST PARAMS: {'C': 1}\n",
+      "\n",
+      "0.67 (+/-0.077) for {'C': 0.001}\n",
+      "0.708 (+/-0.098) for {'C': 0.01}\n",
+      "0.777 (+/-0.134) for {'C': 0.1}\n",
+      "0.8 (+/-0.118) for {'C': 1}\n",
+      "0.794 (+/-0.116) for {'C': 10}\n",
+      "0.794 (+/-0.116) for {'C': 100}\n",
+      "0.794 (+/-0.116) for {'C': 1000}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rueip\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "C:\\Users\\rueip\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
@@ -125,20 +163,19 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "LogisticRegression(C=1)"
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,13 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "['LR-model.pkl']"
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,6 +206,113 @@
    "source": [
     "joblib.dump(lr_cv.best_estimator_, 'LR-model.pkl')"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Support Vector Machine"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BEST PARAMS: {'C': 0.1, 'kernel': 'linear'}\n",
+      "\n",
+      "0.796 (+/-0.115) for {'C': 0.1, 'kernel': 'linear'}\n",
+      "0.654 (+/-0.06) for {'C': 0.1, 'kernel': 'rbf'}\n",
+      "0.796 (+/-0.115) for {'C': 1, 'kernel': 'linear'}\n",
+      "0.661 (+/-0.048) for {'C': 1, 'kernel': 'rbf'}\n",
+      "0.796 (+/-0.115) for {'C': 10, 'kernel': 'linear'}\n",
+      "0.684 (+/-0.07) for {'C': 10, 'kernel': 'rbf'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svc = SVC()\n",
+    "parameters = {\n",
+    "    'kernel': ['linear', 'rbf'],\n",
+    "    'C': [0.1, 1, 10]\n",
+    "}\n",
+    "\n",
+    "svc_cv = GridSearchCV(svc, parameters,cv=5)\n",
+    "svc_cv.fit(tr_features, tr_labels.values.ravel())\n",
+    "\n",
+    "print_results(svc_cv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "SVC(C=0.1, kernel='linear')"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svc_cv.best_estimator_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['SVM-model.pkl']"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(svc_cv.best_estimator_, 'SVM-model.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
