Train a random forest model

--- a/Train-Models.ipynb
+++ b/Train-Models.ipynb
@@ -682,6 +682,113 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Random forest"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BEST PARAMS: {'max_depth': 4, 'n_estimators': 50}\n",
+      "\n",
+      "0.807 (+/-0.102) for {'max_depth': 2, 'n_estimators': 5}\n",
+      "0.807 (+/-0.102) for {'max_depth': 2, 'n_estimators': 50}\n",
+      "0.798 (+/-0.123) for {'max_depth': 2, 'n_estimators': 250}\n",
+      "0.807 (+/-0.095) for {'max_depth': 4, 'n_estimators': 5}\n",
+      "0.826 (+/-0.124) for {'max_depth': 4, 'n_estimators': 50}\n",
+      "0.822 (+/-0.115) for {'max_depth': 4, 'n_estimators': 250}\n",
+      "0.815 (+/-0.08) for {'max_depth': 8, 'n_estimators': 5}\n",
+      "0.82 (+/-0.059) for {'max_depth': 8, 'n_estimators': 50}\n",
+      "0.817 (+/-0.063) for {'max_depth': 8, 'n_estimators': 250}\n",
+      "0.798 (+/-0.068) for {'max_depth': 16, 'n_estimators': 5}\n",
+      "0.802 (+/-0.033) for {'max_depth': 16, 'n_estimators': 50}\n",
+      "0.813 (+/-0.031) for {'max_depth': 16, 'n_estimators': 250}\n",
+      "0.803 (+/-0.012) for {'max_depth': 32, 'n_estimators': 5}\n",
+      "0.82 (+/-0.036) for {'max_depth': 32, 'n_estimators': 50}\n",
+      "0.809 (+/-0.043) for {'max_depth': 32, 'n_estimators': 250}\n",
+      "0.809 (+/-0.057) for {'max_depth': None, 'n_estimators': 5}\n",
+      "0.813 (+/-0.031) for {'max_depth': None, 'n_estimators': 50}\n",
+      "0.817 (+/-0.032) for {'max_depth': None, 'n_estimators': 250}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rf = RandomForestClassifier()\n",
+    "parameters = {\n",
+    "    'n_estimators': [5, 50, 250],\n",
+    "    'max_depth': [2, 4, 8, 16, 32, None]\n",
+    "}\n",
+    "\n",
+    "rf_cv = GridSearchCV(rf, parameters, cv=5)\n",
+    "rf_cv.fit(tr_features, tr_labels.values.ravel())\n",
+    "\n",
+    "print_results(rf_cv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "RandomForestClassifier(max_depth=4, n_estimators=50)"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_cv.best_estimator_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['RF-model.pkl']"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(rf_cv.best_estimator_, 'RF-model.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
