--- a/Train-Models.ipynb
+++ b/Train-Models.ipynb
@@ -789,6 +789,196 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Boosting"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BEST PARAMS: {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 50}\n",
+      "\n",
+      "0.624 (+/-0.007) for {'learning_rate': 0.01, 'max_depth': 1, 'n_estimators': 5}\n",
+      "0.796 (+/-0.115) for {'learning_rate': 0.01, 'max_depth': 1, 'n_estimators': 50}\n",
+      "0.796 (+/-0.115) for {'learning_rate': 0.01, 'max_depth': 1, 'n_estimators': 250}\n",
+      "0.811 (+/-0.117) for {'learning_rate': 0.01, 'max_depth': 1, 'n_estimators': 500}\n",
+      "0.624 (+/-0.007) for {'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 5}\n",
+      "0.811 (+/-0.069) for {'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 50}\n",
+      "0.83 (+/-0.074) for {'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 250}\n",
+      "0.839 (+/-0.084) for {'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 500}\n",
+      "0.624 (+/-0.007) for {'learning_rate': 0.01, 'max_depth': 5, 'n_estimators': 5}\n",
+      "0.822 (+/-0.052) for {'learning_rate': 0.01, 'max_depth': 5, 'n_estimators': 50}\n",
+      "0.818 (+/-0.043) for {'learning_rate': 0.01, 'max_depth': 5, 'n_estimators': 250}\n",
+      "0.822 (+/-0.037) for {'learning_rate': 0.01, 'max_depth': 5, 'n_estimators': 500}\n",
+      "0.624 (+/-0.007) for {'learning_rate': 0.01, 'max_depth': 7, 'n_estimators': 5}\n",
+      "0.817 (+/-0.05) for {'learning_rate': 0.01, 'max_depth': 7, 'n_estimators': 50}\n",
+      "0.817 (+/-0.043) for {'learning_rate': 0.01, 'max_depth': 7, 'n_estimators': 250}\n",
+      "0.798 (+/-0.028) for {'learning_rate': 0.01, 'max_depth': 7, 'n_estimators': 500}\n",
+      "0.624 (+/-0.007) for {'learning_rate': 0.01, 'max_depth': 9, 'n_estimators': 5}\n",
+      "0.803 (+/-0.059) for {'learning_rate': 0.01, 'max_depth': 9, 'n_estimators': 50}\n",
+      "0.803 (+/-0.037) for {'learning_rate': 0.01, 'max_depth': 9, 'n_estimators': 250}\n",
+      "0.788 (+/-0.05) for {'learning_rate': 0.01, 'max_depth': 9, 'n_estimators': 500}\n",
+      "0.796 (+/-0.115) for {'learning_rate': 0.1, 'max_depth': 1, 'n_estimators': 5}\n",
+      "0.815 (+/-0.119) for {'learning_rate': 0.1, 'max_depth': 1, 'n_estimators': 50}\n",
+      "0.818 (+/-0.111) for {'learning_rate': 0.1, 'max_depth': 1, 'n_estimators': 250}\n",
+      "0.828 (+/-0.092) for {'learning_rate': 0.1, 'max_depth': 1, 'n_estimators': 500}\n",
+      "0.813 (+/-0.071) for {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 5}\n",
+      "0.841 (+/-0.07) for {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 50}\n",
+      "0.83 (+/-0.039) for {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 250}\n",
+      "0.809 (+/-0.04) for {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 500}\n",
+      "0.817 (+/-0.045) for {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 5}\n",
+      "0.82 (+/-0.037) for {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 50}\n",
+      "0.807 (+/-0.045) for {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 250}\n",
+      "0.8 (+/-0.034) for {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 500}\n",
+      "0.818 (+/-0.053) for {'learning_rate': 0.1, 'max_depth': 7, 'n_estimators': 5}\n",
+      "0.798 (+/-0.055) for {'learning_rate': 0.1, 'max_depth': 7, 'n_estimators': 50}\n",
+      "0.798 (+/-0.03) for {'learning_rate': 0.1, 'max_depth': 7, 'n_estimators': 250}\n",
+      "0.792 (+/-0.018) for {'learning_rate': 0.1, 'max_depth': 7, 'n_estimators': 500}\n",
+      "0.8 (+/-0.042) for {'learning_rate': 0.1, 'max_depth': 9, 'n_estimators': 5}\n",
+      "0.788 (+/-0.035) for {'learning_rate': 0.1, 'max_depth': 9, 'n_estimators': 50}\n",
+      "0.794 (+/-0.045) for {'learning_rate': 0.1, 'max_depth': 9, 'n_estimators': 250}\n",
+      "0.796 (+/-0.041) for {'learning_rate': 0.1, 'max_depth': 9, 'n_estimators': 500}\n",
+      "0.818 (+/-0.099) for {'learning_rate': 1, 'max_depth': 1, 'n_estimators': 5}\n",
+      "0.832 (+/-0.081) for {'learning_rate': 1, 'max_depth': 1, 'n_estimators': 50}\n",
+      "0.826 (+/-0.077) for {'learning_rate': 1, 'max_depth': 1, 'n_estimators': 250}\n",
+      "0.822 (+/-0.081) for {'learning_rate': 1, 'max_depth': 1, 'n_estimators': 500}\n",
+      "0.824 (+/-0.057) for {'learning_rate': 1, 'max_depth': 3, 'n_estimators': 5}\n",
+      "0.794 (+/-0.036) for {'learning_rate': 1, 'max_depth': 3, 'n_estimators': 50}\n",
+      "0.792 (+/-0.041) for {'learning_rate': 1, 'max_depth': 3, 'n_estimators': 250}\n",
+      "0.792 (+/-0.027) for {'learning_rate': 1, 'max_depth': 3, 'n_estimators': 500}\n",
+      "0.785 (+/-0.033) for {'learning_rate': 1, 'max_depth': 5, 'n_estimators': 5}\n",
+      "0.783 (+/-0.021) for {'learning_rate': 1, 'max_depth': 5, 'n_estimators': 50}\n",
+      "0.792 (+/-0.03) for {'learning_rate': 1, 'max_depth': 5, 'n_estimators': 250}\n",
+      "0.79 (+/-0.025) for {'learning_rate': 1, 'max_depth': 5, 'n_estimators': 500}\n",
+      "0.785 (+/-0.016) for {'learning_rate': 1, 'max_depth': 7, 'n_estimators': 5}\n",
+      "0.798 (+/-0.03) for {'learning_rate': 1, 'max_depth': 7, 'n_estimators': 50}\n",
+      "0.794 (+/-0.032) for {'learning_rate': 1, 'max_depth': 7, 'n_estimators': 250}\n",
+      "0.792 (+/-0.037) for {'learning_rate': 1, 'max_depth': 7, 'n_estimators': 500}\n",
+      "0.775 (+/-0.036) for {'learning_rate': 1, 'max_depth': 9, 'n_estimators': 5}\n",
+      "0.792 (+/-0.05) for {'learning_rate': 1, 'max_depth': 9, 'n_estimators': 50}\n",
+      "0.779 (+/-0.04) for {'learning_rate': 1, 'max_depth': 9, 'n_estimators': 250}\n",
+      "0.8 (+/-0.049) for {'learning_rate': 1, 'max_depth': 9, 'n_estimators': 500}\n",
+      "0.204 (+/-0.115) for {'learning_rate': 10, 'max_depth': 1, 'n_estimators': 5}\n",
+      "0.204 (+/-0.115) for {'learning_rate': 10, 'max_depth': 1, 'n_estimators': 50}\n",
+      "0.204 (+/-0.115) for {'learning_rate': 10, 'max_depth': 1, 'n_estimators': 250}\n",
+      "0.204 (+/-0.115) for {'learning_rate': 10, 'max_depth': 1, 'n_estimators': 500}\n",
+      "0.307 (+/-0.195) for {'learning_rate': 10, 'max_depth': 3, 'n_estimators': 5}\n",
+      "0.307 (+/-0.195) for {'learning_rate': 10, 'max_depth': 3, 'n_estimators': 50}\n",
+      "0.307 (+/-0.195) for {'learning_rate': 10, 'max_depth': 3, 'n_estimators': 250}\n",
+      "0.307 (+/-0.195) for {'learning_rate': 10, 'max_depth': 3, 'n_estimators': 500}\n",
+      "0.417 (+/-0.265) for {'learning_rate': 10, 'max_depth': 5, 'n_estimators': 5}\n",
+      "0.376 (+/-0.194) for {'learning_rate': 10, 'max_depth': 5, 'n_estimators': 50}\n",
+      "0.423 (+/-0.268) for {'learning_rate': 10, 'max_depth': 5, 'n_estimators': 250}\n",
+      "0.38 (+/-0.207) for {'learning_rate': 10, 'max_depth': 5, 'n_estimators': 500}\n",
+      "0.584 (+/-0.142) for {'learning_rate': 10, 'max_depth': 7, 'n_estimators': 5}\n",
+      "0.534 (+/-0.228) for {'learning_rate': 10, 'max_depth': 7, 'n_estimators': 50}\n",
+      "0.59 (+/-0.15) for {'learning_rate': 10, 'max_depth': 7, 'n_estimators': 250}\n",
+      "0.616 (+/-0.146) for {'learning_rate': 10, 'max_depth': 7, 'n_estimators': 500}\n",
+      "0.708 (+/-0.138) for {'learning_rate': 10, 'max_depth': 9, 'n_estimators': 5}\n",
+      "0.719 (+/-0.146) for {'learning_rate': 10, 'max_depth': 9, 'n_estimators': 50}\n",
+      "0.702 (+/-0.132) for {'learning_rate': 10, 'max_depth': 9, 'n_estimators': 250}\n",
+      "0.663 (+/-0.124) for {'learning_rate': 10, 'max_depth': 9, 'n_estimators': 500}\n",
+      "0.376 (+/-0.007) for {'learning_rate': 100, 'max_depth': 1, 'n_estimators': 5}\n",
+      "0.376 (+/-0.007) for {'learning_rate': 100, 'max_depth': 1, 'n_estimators': 50}\n",
+      "0.376 (+/-0.007) for {'learning_rate': 100, 'max_depth': 1, 'n_estimators': 250}\n",
+      "0.376 (+/-0.007) for {'learning_rate': 100, 'max_depth': 1, 'n_estimators': 500}\n",
+      "0.29 (+/-0.102) for {'learning_rate': 100, 'max_depth': 3, 'n_estimators': 5}\n",
+      "0.29 (+/-0.102) for {'learning_rate': 100, 'max_depth': 3, 'n_estimators': 50}\n",
+      "0.29 (+/-0.102) for {'learning_rate': 100, 'max_depth': 3, 'n_estimators': 250}\n",
+      "0.29 (+/-0.102) for {'learning_rate': 100, 'max_depth': 3, 'n_estimators': 500}\n",
+      "0.356 (+/-0.185) for {'learning_rate': 100, 'max_depth': 5, 'n_estimators': 5}\n",
+      "0.352 (+/-0.184) for {'learning_rate': 100, 'max_depth': 5, 'n_estimators': 50}\n",
+      "0.348 (+/-0.175) for {'learning_rate': 100, 'max_depth': 5, 'n_estimators': 250}\n",
+      "0.344 (+/-0.183) for {'learning_rate': 100, 'max_depth': 5, 'n_estimators': 500}\n",
+      "0.569 (+/-0.138) for {'learning_rate': 100, 'max_depth': 7, 'n_estimators': 5}\n",
+      "0.586 (+/-0.133) for {'learning_rate': 100, 'max_depth': 7, 'n_estimators': 50}\n",
+      "0.539 (+/-0.127) for {'learning_rate': 100, 'max_depth': 7, 'n_estimators': 250}\n",
+      "0.558 (+/-0.11) for {'learning_rate': 100, 'max_depth': 7, 'n_estimators': 500}\n",
+      "0.646 (+/-0.102) for {'learning_rate': 100, 'max_depth': 9, 'n_estimators': 5}\n",
+      "0.65 (+/-0.065) for {'learning_rate': 100, 'max_depth': 9, 'n_estimators': 50}\n",
+      "0.661 (+/-0.091) for {'learning_rate': 100, 'max_depth': 9, 'n_estimators': 250}\n",
+      "0.654 (+/-0.087) for {'learning_rate': 100, 'max_depth': 9, 'n_estimators': 500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "gb = GradientBoostingClassifier()\n",
+    "parameters = {\n",
+    "    'n_estimators': [5, 50, 250, 500],\n",
+    "    'max_depth': [1, 3, 5, 7, 9],\n",
+    "    'learning_rate': [0.01, 0.1, 1, 10, 100]\n",
+    "}\n",
+    "\n",
+    "gb_cv = GridSearchCV(gb, parameters, cv=5)\n",
+    "gb_cv.fit(tr_features, tr_labels.values.ravel())\n",
+    "\n",
+    "print_results(gb_cv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "GradientBoostingClassifier(n_estimators=50)"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gb_cv.best_estimator_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['GB-model.pkl']"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(gb_cv.best_estimator_, 'GB-model.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
